--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -1,3 +1,60 @@
 .homepage-container {
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.info-box-container {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    background-color: var(--light-blue);
+    border-radius: 24px;
+}
+
+.extra-info-container {
+    width: 75%;
+   
+}
+
+.extra-icons {
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 40px;
+    margin-right: 25px;
+}
+
+.extra-img {
+    height: 493px;
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    padding-left: 150px;
+
+}
+
+.extra-text {
+    width: 30%;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+}
+
+button {
+   background-color: var(--button); 
+   color: var(--white);
+   height: 40px;
+   width: 200px;
+   border-radius: 10px;
+   font-size: 20px;
+}
+
+h2 {
+    margin: 50px 0;
+    font-size: x-large;
 }
