--- a/src/Components/BannerPic/BannerPic.css
+++ b/src/Components/BannerPic/BannerPic.css
@@ -15,4 +15,18 @@
     left: 445px;
     top: 100px;
     font-size:x-large;
+    
+   
+}
+
+.banner-pic-text p{
+    margin-top: 30px;
+}
+
+.banner-container {
+    display: flex;
+    /* flex-wrap: wrap; */
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
