--- a/src/Components/SearchProperty/SearchProperty.css
+++ b/src/Components/SearchProperty/SearchProperty.css
@@ -1,18 +1,30 @@
-.search-container {
+.search-properties-container {
     height: 100px;
     width: 70%;
     background-color: var(--white);
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.08);
     border-radius: 24px;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     margin-top: -50px;
     z-index: 2;
 }
 
-.search-container select{
+.select-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 50px;
+}
+
+.select-container label {
+    font-weight: bold;
+    margin-bottom: 10px;
+   
+}
+
+.search-properties-container select{
     width: 200px;
     height: 50px;
     border-radius: 10px;
