--- a/src/Components/CityPropertyCard/CityPropertyCard.css
+++ b/src/Components/CityPropertyCard/CityPropertyCard.css
@@ -1,12 +1,82 @@
 .city-property-card{
-    background-color: turquoise;
-    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: var(--white);
+    border: 1px solid #CED3D8;
+    height: 450px;
     width: 325px;
     margin: 50px;
     border-radius: 24px;
 }
 
 .city-property-card img {
-    height: 200px;
-    width: 160px;
+    height: 250px;
+    width: 325px;
+    border-radius: 24px 24px 0 0;
+    margin-top: -20px;
 } 
+
+.blue-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--button);
+    color: var(--white);
+    height: 70px;
+    padding: 10px;
+}
+
+.bedroom-count img, .bathroom-count img{
+    height: 30px;
+    width: 30px;
+}
+
+.blue-right {
+    width: 40%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.bedroom-count, .bathroom-count {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 50px;
+    height: 70px;
+}
+
+.text-box{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin: 10px;
+}
+
+.address {
+    display: flex;
+    width: 210px;
+    margin-top: 30px;
+    justify-content: space-evenly;
+    font-size: smaller;
+    
+}
+
+.view-button img {
+    height: 25px;
+    width: 25px;
+    margin-right: 5px;
+}
+
+.view-button {
+    display: flex;
+    height: 50px;
+    width: 100%;
+    justify-content: center;
+    align-items: flex-end;
+    border: 1px solid #CED3D8;
+    font-size: 20px;
+    padding-bottom: 15px;
+    border-radius: 0 0 24px 24px;
+}
+
