--- a/src/Pages/AllCities/AllCities.css
+++ b/src/Pages/AllCities/AllCities.css
@@ -12,6 +12,7 @@
     border: 1px solid #CED3D8;
     width: 302px;
     height: 88px;
+    margin-top: 30px;
     color: black;
     font-weight: 900;
 }
@@ -24,3 +25,9 @@
 h2 {
     text-align: center;
 }
+
+/* button {
+    background-color: var(--button);
+    color: var(--white);
+    margin-top: 30px;
+} */
