--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -58,3 +58,10 @@ h2 {
     margin: 50px 0;
     font-size: x-large;
 }
+
+.all-cities-button {
+    background-color: var(--button);
+    color: var(--white);
+    margin-top: 40px;
+}
+
