--- a/src/Components/PropertiesCard/PropertiesCard.css
+++ b/src/Components/PropertiesCard/PropertiesCard.css
@@ -26,3 +26,10 @@
     align-items: center;
     
 }
+@media (min-width: 481px) and (max-width:768px){
+
+.property-card {
+    width: 220px;
+
+    }
+}
