--- a/src/Components/Info-box/InfoBox.css
+++ b/src/Components/Info-box/InfoBox.css
@@ -7,8 +7,17 @@
     align-items: center;
 }
 
-.info-box p, h3 {
+.info-box p, .info-box h3 {
     width: 50%;
     text-align: center;
+}
+
+
+
+@media (min-width: 481px) and (max-width:768px){
+
+    .info-box{
+        padding: 30px 0;
+    }
 }
 
