--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -65,3 +65,15 @@ h2 {
     margin-top: 40px;
 }
 
+@media (min-width: 481px) and (max-width:768px){
+    .info-box-container{
+        flex-wrap: wrap;
+        justify-content: space-around;
+        text-align: center;
+        
+    }
+
+
+    
+}
+
