--- a/src/Components/SearchContainer/SearchContainer.css
+++ b/src/Components/SearchContainer/SearchContainer.css
@@ -5,7 +5,7 @@
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.08);
     border-radius: 24px;
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     justify-content: space-around;
     align-items: center;
     margin-top: -50px;
@@ -16,4 +16,10 @@
     width: 200px;
     height: 50px;
     border-radius: 10px;
+}
+
+@media (min-width: 481px) and (max-width:768px){
+    .search-container{
+        width: 95%;
+    }
 }
