worked on media queries and added all cities to search bar

--- a/src/Components/PropertyDescription/PropertyDescription.css
+++ b/src/Components/PropertyDescription/PropertyDescription.css
@@ -10,3 +10,10 @@ h2 {
     text-align: left;
 }
 
+@media (min-width: 481px) and (max-width:768px){
+    .description-container{
+        margin-top: 0px;
+        
+      
+    }
+}
