--- a/src/Components/BigDetailsBox/BigDetailsBox.css
+++ b/src/Components/BigDetailsBox/BigDetailsBox.css
@@ -7,13 +7,13 @@
 
 .address-box {
     display: flex;
-    flex-direction: column;
+    justify-content: space-around;
+    padding: 20px;
     border: 1px solid #CED3D8;
     border-radius: 24px 24px 0 0;
-    justify-content: center;
     align-content: center;
-    /* background-color: yellow; */
-    height: 200px;
+  
+    /* height: 200px; */
 }
 
 .street-city {
@@ -32,7 +32,7 @@
     border: 1px solid #CED3D8;
     border-radius: 0 0 24px 24px;
     width: 550px;
-    height: 375px;
+    height: 200px;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
@@ -42,6 +42,7 @@
 .bedrooms{
     display: flex;
     flex-direction: column;
+    height: 60px;
 }
 
 .bedroom-count{
@@ -61,6 +62,7 @@
 
 .bathrooms{
     display: flex;
+    height: 60px;
     flex-direction: column;
     align-items: center;
 }
