--- a/src/Components/KeyFeatures/KeyFeatures.css
+++ b/src/Components/KeyFeatures/KeyFeatures.css
@@ -16,3 +16,12 @@
     margin: 0 10px;
 }
 
+@media (min-width: 481px) and (max-width:768px){
+    .key-features-container{
+        text-align: left;
+        padding-left: 70px;
+        width: 100%;
+        margin-top: 0;
+    }
+}
+
