--- a/src/Components/Properties/Properties.css
+++ b/src/Components/Properties/Properties.css
@@ -21,8 +21,13 @@
     }
 
     .properties-wrapper{
-        margin-right: 100px;
-        justify-content: space-between;
+
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        width: 100%;
+        
+        /* margin-right: 100px;
+        justify-content: space-between; */
     }
 
 }
