--- a/src/Components/PropertyDetailsPhotos/PropertyDetailsPhotos.css
+++ b/src/Components/PropertyDetailsPhotos/PropertyDetailsPhotos.css
@@ -19,9 +19,10 @@
 
 .small-img-container{
     margin-top: 20px;
-    width: 43%;
+    width: 83%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     
 }
 
