--- a/src/Pages/PropertyDetails/PropertyDetails.css
+++ b/src/Pages/PropertyDetails/PropertyDetails.css
@@ -1,6 +1,28 @@
 .property-details-container{
+    width: 100%;
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 100px 0;
+   
 }
 
+.prices {
+    background-color: blueviolet;
+    height: 300px;
+    width: 500px;
+    margin-top: 80px;
+}
+
+@media (min-width: 481px) and (max-width:768px){
+    .property-details-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    
+    }
+
+    .big-details-box{
+        margin-top: 30px;
+    }
+}
 
