--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -83,16 +83,19 @@ text-indent: 5%;
         display: flex;
         flex-direction: column;
         height: 80%;
+        width: 80%;
         justify-content: space-evenly;
     }
 
     .footer-bottom-bar {
         height: 20vh;
+       
     }
 
     .bottom-bar-info{
         align-items: flex-end;
         height: 80%;
+       
     }
 
 }
