--- a/src/Components/BedroomPrices/BedroomPrices.css
+++ b/src/Components/BedroomPrices/BedroomPrices.css
@@ -5,7 +5,8 @@
     align-items: center;
     border: 1px solid #CED3D8;
     border-radius: 24px;
-    height: 400px;
+    height: auto;
+    padding: 20px 0;
     margin-top: 50px;
 }
 
