--- a/src/Components/BigDetailsBox/BigDetailsBox.css
+++ b/src/Components/BigDetailsBox/BigDetailsBox.css
@@ -31,8 +31,9 @@
     grid-template-columns: auto auto auto;
     border: 1px solid #CED3D8;
     border-radius: 0 0 24px 24px;
-    width: 550px;
-    height: 200px;
+    width: auto;
+    height: auto;
+    padding: 20px 10px;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
@@ -42,7 +43,8 @@
 .bedrooms{
     display: flex;
     flex-direction: column;
-    height: 60px;
+    height: auto;
+    padding: 10px 0;
 }
 
 .bedroom-count{
@@ -62,7 +64,8 @@
 
 .bathrooms{
     display: flex;
-    height: 60px;
+    height: auto;
+    padding: 10px 0;
     flex-direction: column;
     align-items: center;
 }
