--- a/src/Components/ContactForm/ContactForm.css
+++ b/src/Components/ContactForm/ContactForm.css
@@ -1,16 +1,25 @@
 .contact-form-container{
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    align-content: space-between;
-    width: 100%;
+    justify-content: space-around;
+    background-color: azure;
+    align-items: center;
+    width: 80%;
+    position: fixed; /* Stay in place */
+    z-index: 5; /* Sit on top */
+    left: 10%;
+    top: 10%;
+    
+    
+    height: 80%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
 }
 
 .left-side{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 500px;
+    height: 100%;
     width: 50%;
     margin: 50px;
 }
@@ -21,6 +30,8 @@
     justify-content: space-between;
     align-items: center;
     width: 50%;
+    margin-top: 40px;
+    padding-right: 10px;
 }
 
 #contact-pic{
@@ -33,7 +44,7 @@
 .phone-box, .email-box, .name-box, .message-box, .select-box{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
     height: 100px;
 }
 
@@ -60,4 +71,22 @@ select{
     background-color: var(--button);
     color: var(--white);
     width: 100%;
+}
+
+.x-button{
+    top: 5%;
+    padding-left: 10px;
+    padding-top: 10px;
+    width: 100px;
+    height: 100%;
+    color: black;
+}
+
+.contact-header {
+    color: black;
+}
+
+.contact-subtext {
+    color: black;
+
 }
